--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -51,9 +51,17 @@ block content
 
   section.main-area.container-xl
     .review__post-area
-      include parts/review-post.pug
-      include parts/review-post.pug
-      include parts/review-post.pug
+
+      .review__post-collection
+        include parts/review-post.pug
+        include parts/review-post.pug
+        include parts/review-post.pug
+
+      .loading-indicator.justify-content-center.mb-5
+        .spinner-grow.text-dark
+        .spinner-grow.text-dark.mx-3
+        .spinner-grow.text-dark
+
       button.btn.seemore-btn.btn--dark Xem thêm
 
     aside.review__aside-area.hidden-till-md
