--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -59,6 +59,21 @@ section {
   display: none;
 }
 
+@media only screen and (min-width: 375px) {
+  .carousel-caption h3,
+  .carousel-caption p {
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .carousel-caption h3,
+  .carousel-caption p {
+    font-size: 24px;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   main {
     font-size: 14px;
