--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -10,7 +10,7 @@ block title
 block content
 
   img.search__banner.w-100(src="img/img--dslr-hub/dslr-banner-min.png", alt="")
-  
-  h1.search__header Kết quả tìm kiếm cho
-  
+
+  h1.search__header 
+    span.search__result Tìm thấy 0
 
