--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -9,8 +9,27 @@ block title
 
 block content
 
-  img.search__banner.w-100(src="img/img--dslr-hub/dslr-banner-min.png", alt="")
+  .search__banner.w-100
+    img.search__logo(src="img/img--misc/logo-white.png", alt="")
+  
+  section.page-wrapper.container-xl 
 
-  h1.search__header 
-    span.search__result Tìm thấy 0
+    .result-item-area 
+      h1.search__header.w-100 
+        | Tìm thấy&nbsp;
+        span.search__result 3
+        | &nbsp;kết quả cho:&nbsp;
+        span.search__result 5D
+
+      include parts/card-1.pug
+      include parts/card-2.pug
+      include parts/card-3.pug
+
+    .promo-area.hidden-till-md
+      h1.promo-header Khuyến mại HOT
+      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
+      img.promo-item(src="img/img--misc/promo-img-2.jpg", alt="")
+      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
+
+
 
