--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -806,7 +806,7 @@ footer {
   } 
 
   .footer__info {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .copyright {
@@ -849,6 +849,10 @@ footer {
     height: 40px;
     padding: 5px 0px;
     line-height: 30px;
+  }
+
+  .copyright {
+    font-size: 14px;
   }
 
 }
@@ -985,4 +989,16 @@ footer {
     font-size: 14px;
   }
   
+  .footer__link {
+    font-size: 20px;
+  } 
+
+  .footer__info {
+    font-size: 18px;
+  }
+
+  .copyright {
+    font-size: 16px;
+  }
+
 }
