--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -103,11 +103,17 @@ block content
       button.offers__btn.btn Đăng ký mua trả góp lãi suất 0%
       
       p.offers__contact
-        | Tư vấn miền Bắc: 0397496263 (Mr. Nguyễn) 
+        | Tư vấn miền Bắc: 
+        a.text-primary(href="#") 0397496263 
+        | (Mr. Nguyễn) 
         br
-        | Tư vấn miền Trung: 0397496263 (Mr. Trung)  
+        | Tư vấn miền Trung: 
+        a.text-primary(href="#") 0397496263 
+        | (Mr. Trung)    
         br
-        | Tư vấn miền Nam: 0397496263 (Mr. Đức)  
+        | Tư vấn miền Nam: 
+        a.text-primary(href="#") 0397496263 
+        | (Mr. Đức)    
 
     section.details__main-info
 
