--- a/halo/css/details.css
+++ b/halo/css/details.css
@@ -203,6 +203,10 @@ section {
   text-align: center;
 }
 
+.offers__contact span {
+  
+}
+
 /* --------------- hết details__offers --------------- */
 
 
@@ -808,6 +812,10 @@ section {
     width: 280px;
     max-width: 280px;
     margin: 15px 0px;
+  }
+
+  .details__sale-amount {
+    font-size: 14px;
   }
 
 }
