--- a/halo/template/parts/card-3.pug
+++ b/halo/template/parts/card-3.pug
@@ -1,14 +1,14 @@
 .card.item
-  img.card-img-top(src='img/img--camera-body/canon-eos-5d-mark-iv-card.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-3.jpg' alt='')
   .card-body.text-center
     p.card-title.font-weight-bold.font-18
-      | Canon EOS 5D Mark IV
+      | Sony Alpha A7 Mark II
       br
       span.font-italic.font.font-weight-light.font-13 (Mới 100% fullbox)
-    p.card-text.price.font-weight-bold 50.090.000đ
+    p.card-text.price.font-weight-bold 23.990.000đ
     p.card-text.sale-text.font-weight-bold
-      span.old-price 58.090.000đ
+      span.old-price 26.990.000đ
       span.sale-badge
         img(src='img/img--misc/badge--sale.png' alt='')
-      span.sale-amount.font-italic (Giảm 8.000.000đ)
+      span.sale-amount.font-italic (Giảm 3.000.000đ)
     a.btn.btn--dark.seemore-btn(href='details.html') Xem chi tiết 
