--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -1,13 +1,13 @@
 .card.item
-  img.card-img-top(src='img/img--camera-body/canon-eos-5d-mark-iv-card.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-5.jpg' alt='')
   .card-body.text-center
     p.card-title.font-weight-bold.font-18
-      | Canon EOS 5D Mark IV
+      | Canon 1DX Mark III
       br
       span.font-italic.font.font-weight-light.font-13 (Mới 100% fullbox)
-    p.card-text.price.font-weight-bold 50.090.000đ
+    p.card-text.price.font-weight-bold 130.090.000đ
     p.card-text.sale-text.font-weight-bold
-      span.old-price 58.090.000đ
+      span.old-price 138.090.000đ
       span.sale-badge
         img(src='img/img--misc/badge--sale.png' alt='')
       span.sale-amount.font-italic (Giảm 8.000.000đ)
