--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -23,6 +23,7 @@ html(lang="en")
 
       
   body
+    include fb-chat.pug
     include header.pug
   
     main
@@ -30,6 +31,8 @@ html(lang="en")
       include logreg.pug
       
       block content
+
+      include utilities-btn.pug
 
     include footer.pug
 
