--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -165,7 +165,7 @@ block content
                 input(type="radio" name="payment-method", id="cod-radio" form="methods-selection")
                 label(for="cod-radio") Thanh toán khi nhận hàng (COD)
 
-              a#cod.method__content.collapse.btn.btn--confirmation.payment__toggler(href="#" data-parent="#methods-selection") Xác nhận
+              a#cod.method__content.collapse.btn.btn--confirmation.payment__toggler(href="checkout.html" data-parent="#methods-selection") Xác nhận
          
 
 
