--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -84,6 +84,8 @@ block content
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
+    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-1.jpg", alt="")
+
   section.hub-row.hub-row--hot.container-xl
     h1.section__header BÁN CHẠY
 
@@ -95,6 +97,8 @@ block content
       include parts/card-5.pug
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
+
+    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-2.jpg", alt="")
 
   section.hub-row.hub-row--love.container-xl
     h1.section__header ĐÁNH GIÁ TỐT
@@ -108,5 +112,6 @@ block content
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
+    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-3.jpg", alt="")
 
 
