--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -728,7 +728,27 @@ footer {
  -------------------- */
 
 /* ---------- scroll up btn ---------- */
+.utilities-btn-group {
+  position: fixed;
+  bottom: 120px;
+  right: 12px;
+  width: 60px;
+}
 
+.scroll-up-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: #6699cc;
+  border-radius: 50%;
+}
+
+.scroll-up-btn i {
+  font-size: 45px;
+  color: #fff;
+}
 /* ---------- hết scroll up btn ---------- */
 
 /* --------------------
