--- a/halo/template/parts/utilities-btn.pug
+++ b/halo/template/parts/utilities-btn.pug
@@ -1,4 +1,4 @@
 .utilities-btn-group 
   .scroll-up-btn
-    a.scroll-up-btn__link(href="#") 
+    a.scroll-up-btn__link(href="#collapsibleNavbar") 
       i.fas.fa-chevron-up
