--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -737,7 +737,7 @@ footer {
 }
 
 .scroll-up-btn {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
