--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -737,13 +737,15 @@ footer {
 }
 
 .scroll-up-btn {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 60px;
   background-color: #6699cc;
   border-radius: 50%;
+  transition: all 0.3s;
+  transform: scale(0);
 }
 
 .scroll-up-btn i {
