--- a/halo/template/dslr-hub.pug
+++ b/halo/template/dslr-hub.pug
@@ -15,7 +15,9 @@ block content
         a(href='camera-hub.html') Máy ảnh
       li.breadcrumb-item.active Máy ảnh DSLR
 
-  img.dslr-hub__banner.w-100(src="img/img--dslr-hub/dslr-banner-min.png", alt="")    
+  .dslr-hub__banner.w-100
+    h1 DSLR 
+    p SÁNG TẠO KHÔNG GIỚI HẠN    
 
   .dslr-hub__display-area.container-xl
     aside.dslr-hub__aside-area
