--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -48,11 +48,11 @@ block content
   section.portal.hidden-till-md
 
     .portal__bg.hidden-till-md
-      .portal__bg--green
-      .portal__bg--pink
+      .portal__bg--green.dslr-half
+      .portal__bg--pink.mrl-half
 
     .portal__body.container-xl.d-flex
-      .banner-full.banner-full--dslr.d-flex.w-50
+      .banner-full.banner-full--dslr.dslr-half.d-flex.w-50(data-aos="fade-right" data-aos-duration="900" data-aos-easing="ease-in-sine" data-aos-offset="500")
         img.banner-full__img(src="img/img--camera-hub/portal-dslr-v1.png", alt="")
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold
@@ -61,7 +61,7 @@ block content
             p.banner-full__text.banner-full__text--dslr CỘNG ĐỒNG LỚN
           a.btn.btn--dark.banner-full__btn.banner-full__btn--dslr(href="dslr-hub.html") Xem tất cả DSLR
 
-      .banner-full.banner-full--mrl.d-flex.w-50
+      .banner-full.banner-full--mrl.mrl-half.d-flex.w-50(data-aos="fade-left" data-aos-duration="900" data-aos-easing="ease-in-sine")
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold 
             p.banner-full__text.banner-full__text--mrl.text-light TRẺ TRUNG
@@ -82,9 +82,10 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
+    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
 
-    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-1.jpg", alt="")
+    a(href="dslr-hub.html") 
+      img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-1.jpg", alt="")
 
   section.hub-row.hub-row--hot.container-xl
     h1.section__header BÁN CHẠY
@@ -96,9 +97,10 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
-
-    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-2.jpg", alt="")
+    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
+    
+    a(href="dslr-hub.html") 
+      img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-2.jpg", alt="")
 
   section.hub-row.hub-row--love.container-xl
     h1.section__header ĐÁNH GIÁ TỐT
@@ -110,8 +112,9 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
+    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
 
-    img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-3.jpg", alt="")
+    a(href="dslr-hub.html") 
+      img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-3.jpg", alt="")
 
 
