--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -14,6 +14,8 @@ html(lang="en")
 
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css' integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l' crossorigin='anonymous')
 
+    link(href='https://unpkg.com/aos@2.3.1/dist/aos.css' rel='stylesheet')
+
     link(rel="stylesheet" href="css/layout.css")
 
     block css
@@ -42,6 +44,8 @@ html(lang="en")
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
 
     script(type='text/javascript' src='//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js')
+
+    script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
     
     block script
     
