--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -332,9 +332,10 @@ h1, h2 {
 /* -------------------- effect styles -------------------- */
 /* ----- dark shadow ----- */
 .btn--dark,
-.connection__input,
+.connection__input, 
+.connection__input:focus, 
 .connection__submit-btn {
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2) !important;
 }
 /* ----- white shadow ----- */
 .btn--light,
@@ -349,14 +350,18 @@ h1, h2 {
 }
 
 /* ----- hover item ----- */
-.item {
-  transition: all 0.3s;
+.item, .item * {
+  transition: all 0.4s;
 }
 
 .item:hover {
   border: 1px solid #555555;
-  box-shadow: 0px 0px 25px rgb(0 0 0 / 15%);
+  box-shadow: 0px 0px 25px rgb(0 0 0 / 20%);
   cursor: pointer;
+}
+
+.item:hover > .card-img-top {
+  transform: scale(1.1);
 }
 
 
@@ -742,15 +747,19 @@ footer {
   align-items: center;
   width: 100%;
   height: 60px;
-  background-color: #6699cc;
+  background-color: black;
+  opacity: 0.5;
   border-radius: 50%;
-  transition: all 0.3s;
-  transform: scale(0);
+  transition: all 0.4s;
 }
 
 .scroll-up-btn i {
   font-size: 45px;
   color: #fff;
+}
+
+.scroll-up-btn:hover {
+  opacity: 1;
 }
 /* ---------- hết scroll up btn ---------- */
 
