--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -364,4 +364,5 @@ block content
         include parts/card-1.pug
         include parts/card-2.pug
 
-
+block script2 
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
