--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -37,8 +37,6 @@ html(lang="en")
 
     include footer.pug
 
-    block script1
-
     script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
 
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
@@ -49,7 +47,7 @@ html(lang="en")
 
     script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
     
-    block script2
+    block script
     
     script(src='js/script.js')
 
