--- a/halo/css/details.css
+++ b/halo/css/details.css
@@ -435,6 +435,7 @@ section {
 
 .card-title {
   line-height: 18px;
+  min-height: 56px;
 }
 
 .price {
@@ -474,7 +475,10 @@ section {
 
 
 @media only screen and (min-width: 576px) {
-
+  .card-title {
+    min-height: 30px;
+  }
+  
   #sample .modal-content {
     margin: auto;
     width: calc(100% - 60px);
