--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -52,7 +52,7 @@ block content
       .portal__bg--pink.mrl-half
 
     .portal__body.container-xl.d-flex
-      .banner-full.banner-full--dslr.dslr-half.d-flex.w-50(data-aos="fade-right" data-aos-duration="900" data-aos-easing="ease-in-sine" data-aos-offset="500")
+      .banner-full.banner-full--dslr.dslr-half.d-flex.w-50
         img.banner-full__img(src="img/img--camera-hub/portal-dslr-v1.png", alt="")
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold
@@ -61,7 +61,7 @@ block content
             p.banner-full__text.banner-full__text--dslr CỘNG ĐỒNG LỚN
           a.btn.btn--dark.banner-full__btn.banner-full__btn--dslr(href="dslr-hub.html") Xem tất cả DSLR
 
-      .banner-full.banner-full--mrl.mrl-half.d-flex.w-50(data-aos="fade-left" data-aos-duration="900" data-aos-easing="ease-in-sine")
+      .banner-full.banner-full--mrl.mrl-half.d-flex.w-50
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold 
             p.banner-full__text.banner-full__text--mrl.text-light TRẺ TRUNG
