--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -145,7 +145,7 @@ block content
 
       a.btn.btn--light.seemore-btn.mx-auto(href="review.html") Xem thêm        
 
-  section.connection
+  section.connection.container-xl
 
       h1.connection__header Đăng ký để nhận tin mới nhất từ HALO
       form.connection__form.d-flex.justify-content-center(action="")
