--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -45,7 +45,7 @@ html(lang="en")
 
     script(type='text/javascript' src='//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js')
 
-
+    script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
     
     block script
     
