--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -6,6 +6,9 @@ block css
 block title
   title HALO
 
+block script
+  script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
+
 block content 
 
   include parts/main-carousel.pug
