--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -72,8 +72,8 @@
               img.extra-img(src="img/img--carousel/carousel-2-extra-3.png", alt="")
 
           p.main-carousel__text.display-till-md SỰ HOÀN HẢO
-          p.main-carousel__text.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
-          p.main-carousel__text.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
+          p.main-carousel__text.hidden-till-md Sự hoàn hảo chưa bao giờ đơn giản đến vậy
+          p.main-carousel__text.display-till-md CHƯA BAO GIỜ ĐƠN GIẢN  ĐẾN VẬY
 
 
           button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
