--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
-    link(rel='shortcut icon' href='/halo/favicon.ico')
+    link(rel='shortcut icon' href='/halo/favicon/favicon.ico')
     
     link(rel='preconnect' href='https://fonts.gstatic.com')
 
