--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -9,6 +9,7 @@ block title
   
 block script 
   script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
+  script(src='js/aos-init.js')
 
 block content
 
