--- a/halo/template/checkout.pug
+++ b/halo/template/checkout.pug
@@ -65,7 +65,9 @@ block content
 
       .hotline
         span.checkout-box__inner-header Tổng đài hỗ trợ 24/07: 
-        span 0xx.xxx.xxxx   
+        span.text-primary 0169.749.6263 
+
+      a.btn.btn--continue-buying(href="index.html") Tiếp tục mua hàng  
     
 
 
