--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -69,7 +69,7 @@ block content
           span.details__sale-amount (Giảm 8.000.000đ)
 
         .summary__btn-wrapper
-          button.summary__btn.btn Mua ngay      
+          a.summary__btn.btn.d-flex.justify-content-center.align-items-center(href="cart.html") Mua ngay      
           button.summary__btn.btn Thêm vào giỏ hàng 
 
         .summary__box-content 
