--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -15,7 +15,7 @@ block content
   section.page-wrapper.container-xl 
 
     .result-item-area 
-      h1.search__header.w-100 
+      h1.search__header.w-100.text-left 
         | Tìm thấy&nbsp;
         span.search__result 3
         | &nbsp;kết quả cho:&nbsp;
