--- a/halo/template/parts/visa-master-card.pug
+++ b/halo/template/parts/visa-master-card.pug
@@ -43,4 +43,4 @@
       label(for='visa-master-input__name') Mã số CVV:
       input#visa-master-input__cvv.form-control.back-input(type="number" min="1" max="999" required)
 
-    input.btn.btn--confirmation(type='submit' value="Xác nhận")
+    a.btn.btn--confirmation(href='checkout.html') Xác nhận
