--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -123,7 +123,7 @@ block content
     .container-xl.px-sm-5.mw-900
       h1 HALO review
 
-      a.review-item.d-flex(href="review.html" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000")
+      a.review-item.d-flex(href="review-details.html" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000")
         img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
 
         .review-item__content.d-flex.flex-column.justify-content-between
@@ -135,7 +135,7 @@ block content
               | 01/01/2021
           p.review-preview Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
       
-      a.review-item.d-flex(href="review.html" data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
+      a.review-item.d-flex(href="review-details.html" data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
         img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
         
         .review-item__content.d-flex.flex-column.justify-content-between
