--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -21,14 +21,14 @@ block content
         li(data-target='#sub-banner-area--min' data-slide-to='2')
         
       .carousel-inner
-        .carousel-item.active
+        a.carousel-item.active(href="review-details.html") 
           img(src='/halo/img/img--review/sub-banner-big--min.jpg' alt='')
           .carousel-caption
             h3 Nikon Z7 Review:&nbsp; 
             p Canh bạc cho tương lai của Nikon
-        .carousel-item
+        a.carousel-item(href="review-details.html") 
           img(src='img/img--review/review-sub-banner-1.png' alt='')
-        .carousel-item
+        a.carousel-item(href="review-details.html") 
           img(src='img/img--review/review-sub-banner-2.png' alt='')
             
       a.carousel-control-prev(href='#sub-banner-area--min' data-slide='prev')
@@ -38,15 +38,15 @@ block content
     
   section#sub-banner-area--max.container-xl.hidden-till-md
 
-    a.review__sub-banner--big(href="#")
+    a.review__sub-banner--big(href="review-details.html")
       span Nikon Z7 Review: 
       span Canh bạc cho tương lai của Nikon
 
     .review__sub-banner--small-area 
-      a.review__sub-banner--small(href="")
+      a.review__sub-banner--small(href="review-details.html")
         img(src="img/img--review/review-sub-banner-1.png", alt="") 
 
-      a.review__sub-banner--small(href="")
+      a.review__sub-banner--small(href="review-details.html")
         img(src="img/img--review/review-sub-banner-2.png", alt="") 
 
   section.main-area.container-xl
