--- a/halo/template/parts/card-3.pug
+++ b/halo/template/parts/card-3.pug
@@ -1,5 +1,7 @@
-.card.item
+.card.item.item--hot.item--sale
   img.card-img-top(src='img/img--item/item-3.jpg' alt='')
+  img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
+  img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
     p.card-title.font-weight-bold.font-18
       | Sony Alpha A7 Mark II
@@ -8,7 +10,6 @@
     p.card-text.price.font-weight-bold 23.990.000đ
     p.card-text.sale-text.font-weight-bold
       span.old-price 26.990.000đ
-      span.sale-badge
-        img(src='img/img--misc/badge--sale.png' alt='')
+      img.item__badge.item__badge--sale(src='img/img--misc/badge--sale.png' alt='')
       span.sale-amount.font-italic (Giảm 3.000.000đ)
     a.btn.btn--dark.seemore-btn(href='details.html') Xem chi tiết 
