--- a/halo/template/dslr-hub.pug
+++ b/halo/template/dslr-hub.pug
@@ -35,6 +35,7 @@ block content
           .dropdown-menu
             a.dropdown-item(href='#') Canon
             a.dropdown-item(href='#') Nikon
+            a.dropdown-item(href='#') Khác 
 
         .dropdown
           button.btn.dropdown-toggle(type='button' data-toggle='dropdown') ISO tối đa
@@ -75,6 +76,8 @@ block content
               a(href="#") Canon 
             li 
               a(href="#") Nikon
+            li 
+              a(href="#") Khác
 
         .technical-filter--max__filter-group
           button(data-toggle='collapse' data-target='#filter--size') Kích cỡ cảm biến
