--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -6,7 +6,7 @@
     p.card-title.font-weight-bold.font-18
       | Canon 1DX Mark III
       br
-      span.font-italic.font.font-weight-light.font-13 (Mới 100% fullbox)
+      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 130.090.000đ
     p.card-text.sale-text.font-weight-bold
       span.old-price 138.090.000đ
