--- a/halo/template/parts/card-1.pug
+++ b/halo/template/parts/card-1.pug
@@ -6,7 +6,7 @@
     p.card-title.font-weight-bold.font-18
       | Canon EOS 5D Mark IV
       br
-      span.font-italic.font.font-weight-light.font-13 (Mới 100% fullbox)
+      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 50.090.000đ
     .card-text.sale-text.font-weight-bold
       span.old-price 58.090.000đ
