--- a/halo/template/parts/card-4.pug
+++ b/halo/template/parts/card-4.pug
@@ -6,7 +6,7 @@
     p.card-title.font-weight-bold.font-18
       | Nikon D7500
       br
-      span.font-italic.font.font-weight-light.font-13 (Mới 100% fullbox)
+      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 17.990.000đ
     p.card-text.sale-text.font-weight-bold
       span.old-price 22.990.000đ
