--- a/halo/template/parts/card-1.pug
+++ b/halo/template/parts/card-1.pug
@@ -3,10 +3,8 @@
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
-    p.card-title.font-weight-bold.font-18
-      | Canon EOS 5D Mark IV
-      br
-      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
+    p.item__name.font-weight-bold.font-18 Canon EOS 5D Mark IV
+    p.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 50.090.000đ
     .card-text.sale-text.font-weight-bold
       span.old-price 58.090.000đ
