--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -3,12 +3,10 @@
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
-    p.card-title.font-weight-bold.font-18
-      | Canon 1DX Mark III
-      br
-      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
+    p.item__name.font-weight-bold.font-18 Canon 1DX Mark III
+    p.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 130.090.000đ
-    p.card-text.sale-text.font-weight-bold
+    .card-text.sale-text.font-weight-bold
       span.old-price 138.090.000đ
       img.item__badge.item__badge--sale(src='img/img--misc/badge--sale.png' alt='')
       span.sale-amount.font-italic (Giảm 8.000.000đ)
