--- a/halo/template/parts/card-4.pug
+++ b/halo/template/parts/card-4.pug
@@ -3,12 +3,10 @@
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
-    p.card-title.font-weight-bold.font-18
-      | Nikon D7500
-      br
-      span.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
+    p.item__name.font-weight-bold.font-18 Nikon D7500
+    p.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
     p.card-text.price.font-weight-bold 17.990.000đ
-    p.card-text.sale-text.font-weight-bold
+    .card-text.sale-text.font-weight-bold
       span.old-price 22.990.000đ
       img.item__badge.item__badge--sale(src='img/img--misc/badge--sale.png' alt='')
       span.sale-amount.font-italic (Giảm 5.000.000đ)
